[package]
name = "solana-hello-world"
version = "0.1.0"
edition = "2021"

[lib]
name = "solana_hello_world"
crate-type = ["cdylib", "lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# solana-program = "=1.17.0"
solana-program = "1.18.3"
